back to top button

--- a/footer.html
+++ b/footer.html
@@ -2,4 +2,7 @@
   <button type="button" class="btn btn-light" href="">Website Home</button>
   <!--<h5>Contact Me</h5>-->
   <!--<p>ryanheal89@gmail.com</p>-->
+  <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 </footer>
