added all pages and testing navigation

--- a/comps/header.html
+++ b/comps/header.html
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top shadow navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="">Ryan Heal</a>
+      <a class="navbar-brand" href="./index.html">Ryan Heal</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,10 +18,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <a class="nav-link" href="./blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About Me</a>
+            <a class="nav-link" href="./about.html">About Me</a>
           </li>
         </ul>
       </div>
